fix z-index go-to-top button

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -183,7 +183,8 @@ span.navbar-toggler-icon {
     display: none;
     -webkit-border-radius: 60px;
     -moz-border-radius: 60px;
-    border-radius: 60px
+    border-radius: 60px;
+    z-index: 5000;
 }
 
 #scroll span {
